WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201482
Cancelled transitions on Google image search leave content with opacity 0 sometimes
https://bugs.webkit.org/show_bug.cgi?id=201482
Summary
Cancelled transitions on Google image search leave content with opacity 0 som...
Simon Fraser (smfr)
Reported
2019-09-04 17:21:39 PDT
Cancelled transitions on Google image search leave content with opacity 0 sometimes
Attachments
Patch
(16.78 KB, patch)
2019-09-04 17:25 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-09-04 17:25:18 PDT
Created
attachment 378030
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-09-04 17:25:20 PDT
<
rdar://problem/54921036
>
Simon Fraser (smfr)
Comment 3
2019-09-04 18:40:48 PDT
https://trac.webkit.org/changeset/249511/webkit
Truitt Savell
Comment 4
2019-09-06 14:48:09 PDT
It looks like the new test legacy-animation-engine/compositing/transitions/add-remove-transition.html added in
https://trac.webkit.org/changeset/249511/webkit
is a flakey failure on Mac. History:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=legacy-animation-engine%2Fcompositing%2Ftransitions%2Fadd-remove-transition.html
Diff:
https://build.webkit.org/results/Apple%20Mojave%20Debug%20WK1%20(Tests)/r249588%20(5450)/legacy-animation-engine/compositing/transitions/add-remove-transition-diffs.html
Simon Fraser (smfr)
Comment 5
2019-09-10 13:22:45 PDT
I haven't been able to reproduce the flakiness yet.
Simon Fraser (smfr)
Comment 6
2019-09-10 13:46:11 PDT
[4796/5000] legacy-animation-engine/compositing/transitions/add-remove-transition.html failed unexpectedly (reference mismatch)
Simon Fraser (smfr)
Comment 7
2019-09-10 15:00:12 PDT
Attempted to de-flake in
https://trac.webkit.org/changeset/249734/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug